add_scripts_slice_text

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,10 @@
                         <div class="">Соответсвие: <span>4</span></div>
                         <div class="">Надежность: <span>5</span></div>
                     </div>
-                    <p class="product__reviews">Значит купил я данную модель, поработал неделю, отказал один аккумулятор, заряд держит так себе, НОООООО МАГАЗИН АДЕКВАТНЫЙ, ОБМЕНЯЛИ НА НОВЫЙ, ПРИЧЁМ ПРИВЕЗЛИ ДОМОЙ. С ТАКИМ ПРОДАВЦОМ ПРИЯТНО...</p>
+                    <p class="product__reviews" id="product__reviews">Значит купил я данную модель, поработал неделю, отказал один аккумулятор, заряд держит так себе, НОООООО МАГАЗИН АДЕКВАТНЫЙ, ОБМЕНЯЛИ НА НОВЫЙ, ПРИЧЁМ ПРИВЕЗЛИ ДОМОЙ. С ТАКИМ ПРОДАВЦОМ ПРИЯТНО...</p>
+                    <div class="reviews__more">
+                        <span class="d-block more" >Подробнее</span> <span class="arrow-down d-block"></span>
+                    </div>
                 </div>
                 <div class="table__col col-4">
                     <span class="d-block btn btn-success">Опубликовано</span>
